Fixed alignment issues: different screen size

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,6 +122,12 @@ nav ul {
 /* --------------------------- */
 /* SERVICES */
 /* --------------------------- */
+
+.services {
+    padding-left: 50px;
+    padding-bottom: 50px;
+}
+
 .services-section {
     background-color: rgb(235, 235, 235);
     color: rgb(66, 66, 66);
@@ -142,7 +148,7 @@ nav ul {
     border-bottom: 2px solid #2ecc71;
     font-size: 200%;
     font-weight: 300;
-    letter-spacing: 3px;
+    letter-spacing: -1px;
     text-transform: uppercase;
 }
 
@@ -187,6 +193,7 @@ nav ul {
     background-size: cover;
     background-attachment: fixed;
     overflow: hidden;
+    padding-left: 50px;
 
 }
 
@@ -213,7 +220,7 @@ nav ul {
 .testi-name {
     position: relative;
     left: 85px;
-    top: -42px;
+    top: -62px;
 }
 
 .testimonials h2 {
@@ -231,29 +238,31 @@ nav ul {
 
 section.payment {
     color: rgb(66, 66, 66);
+    overflow: hidden;
 
 }
 
 .payment-heading {
-    position: absolute;
-    right: 690px;
     text-align: center;
-    margin-top: 30px;
-    text-align: center;
-    margin: 30px 0;
+    text-align:;
+    margin: 30px 0px 0px 430px;
     padding-bottom: 10px;
     border-bottom: 2px solid #2ecc71;
     display: inline-block;
-    margin-right: 147px;
     text-transform: uppercase;
 
 }
 
+.wrapper {
+    margin-left: 160px;
+    width: 110%;
+
+}
+
 .card {
-    position: relative;
     left: 90px;
     display: block;
-    margin-top: 150px;
+    margin-top: 80px;
     padding-top: 40px;
     background-color: rgb(253, 252, 252);
     border-radius: 10px;
@@ -261,7 +270,7 @@ section.payment {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.267);
     width: 30%;
     margin-bottom: 120px;
-    margin-right: 95px;
+    margin-right: 50px;
     
 }
 
